[gd_scene load_steps=9 format=3 uid="uid://cpvfnsdpifqyj"]

[ext_resource type="PackedScene" path="res://scenes/microgames/kite/EnemySpawner.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://c6b5x1n135ph6" path="res://scenes/microgames/reusable/HUD.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bxyd0gvgnw6md" path="res://scenes/microgames/kite/KitePlayer.tscn" id="3"]
[ext_resource type="Script" uid="uid://cvtqr1g4cm5nb" path="res://scenes/microgames/kite/KiteMain.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://rpdlg1a0cnr" path="res://scenes/microgames/kite/SecondKite.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://dextdfl58dyos" path="res://scenes/microgames/kite/assets/bg2.png" id="6"]
[ext_resource type="Script" uid="uid://dqntllj1nj1hs" path="res://scenes/microgames/kite/BG.gd" id="7"]
[ext_resource type="AudioStream" uid="uid://b8mplmr3sn4g2" path="res://scenes/microgames/kite/assets/Bubble Pop Dance.ogg" id="8_fo1mh"]

[node name="KiteMain" type="Node"]
script = ExtResource("4")
SecondKite = ExtResource("5")

[node name="BG" type="Node2D" parent="."]
scale = Vector2(2, 2)
script = ExtResource("7")

[node name="Sprite2D" type="Sprite2D" parent="BG"]
texture = ExtResource("6")
centered = false

[node name="Sprite2" type="Sprite2D" parent="BG"]
position = Vector2(320, 0)
texture = ExtResource("6")
centered = false

[node name="Sprite3" type="Sprite2D" parent="BG"]
position = Vector2(640, 0)
texture = ExtResource("6")
centered = false

[node name="KitePlayer" parent="." instance=ExtResource("3")]
position = Vector2(75, 240)

[node name="EnemySpawner" parent="." instance=ExtResource("1")]
position = Vector2(760, 0)

[node name="HUD" parent="." instance=ExtResource("2")]

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_fo1mh")
volume_db = -20.0
autoplay = true

[connection signal="kite_lose" from="." to="HUD" method="_on_lose"]
[connection signal="kite_win" from="." to="HUD" method="_on_win"]
[connection signal="body_entered" from="KitePlayer" to="KitePlayer" method="_on_KitePlayer_body_entered"]
[connection signal="finished" from="KitePlayer" to="." method="_on_KitePlayer_finished"]
[connection signal="hit" from="KitePlayer" to="." method="on_game_over"]
[connection signal="no_more_enemies" from="EnemySpawner" to="." method="_on_EnemySpawner_no_more_enemies"]
[connection signal="message_over" from="HUD" to="." method="_on_HUD_message_over"]
